WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94550
[chromium] Texture layer should not generate zero textureId quads
https://bugs.webkit.org/show_bug.cgi?id=94550
Summary
[chromium] Texture layer should not generate zero textureId quads
Alexandre Elias
Reported
2012-08-20 17:07:57 PDT
[chromium] Texture layer should not generate zero textureId quads
Attachments
Patch
(3.90 KB, patch)
2012-08-20 17:12 PDT
,
Alexandre Elias
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexandre Elias
Comment 1
2012-08-20 17:12:54 PDT
Created
attachment 159566
[details]
Patch
Dana Jansens
Comment 2
2012-08-20 17:17:14 PDT
Comment on
attachment 159566
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=159566&action=review
> Source/WebCore/platform/graphics/chromium/cc/CCTextureLayerImpl.cpp:91 > + m_externalTextureResource = 0;
I don't think you need this, m_externalTextureResource is cleared in didDraw. And we won't call didLoseContext in the middle of creating the quads for a frame right?
Adrienne Walker
Comment 3
2012-08-20 17:20:58 PDT
Comment on
attachment 159566
[details]
Patch R=me. I think clearing m_externalTextureResources is fine. Thanks for fixing this bug.
WebKit Review Bot
Comment 4
2012-08-20 19:35:49 PDT
Comment on
attachment 159566
[details]
Patch Clearing flags on attachment: 159566 Committed
r126122
: <
http://trac.webkit.org/changeset/126122
>
WebKit Review Bot
Comment 5
2012-08-20 19:35:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug