Source/WebCore/platform/graphics/chromium/cc/CCTextureLayerImpl.cpp
@@ -52,20 +52,24 @@ CCTextureLayerImpl::~CCTextureLayerImpl()
 
 void CCTextureLayerImpl::willDraw(CCResourceProvider* resourceProvider)
 {
+    if (!m_textureId)
+        return;
     ASSERT(!m_externalTextureResource);
     m_externalTextureResource = resourceProvider->createResourceFromExternalTexture(m_textureId);
 }
 
 void CCTextureLayerImpl::appendQuads(CCQuadSink& quadList, const CCSharedQuadState* sharedQuadState, bool&)
 {
-    ASSERT(m_externalTextureResource);
+    if (!m_externalTextureResource)
+        return;
     IntRect quadRect(IntPoint(), contentBounds());
     quadList.append(CCTextureDrawQuad::create(sharedQuadState, quadRect, m_externalTextureResource, m_premultipliedAlpha, m_uvRect, m_flipped));
 }
 
 void CCTextureLayerImpl::didDraw(CCResourceProvider* resourceProvider)
 {
-    ASSERT(m_externalTextureResource);
+    if (!m_externalTextureResource)
+        return;
     // FIXME: the following assert will not be true when sending resources to a
     // parent compositor. A synchronization scheme (double-buffering or
     // pipelining of updates) for the client will need to exist to solve this.
@@ -84,6 +88,7 @@ void CCTextureLayerImpl::dumpLayerProperties(TextStream& ts, int indent) const
 void CCTextureLayerImpl::didLoseContext()
 {
     m_textureId = 0;
+    m_externalTextureResource = 0;
 }
 
 }
